Implementation for compatability